<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProductInformationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefresh"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/background_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="15dp"
                            android:orientation="vertical"
                            android:paddingVertical="10dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="5dp"
                                android:gravity="center_vertical"
                                android:orientation="horizontal"
                                android:weightSum="6">

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="2"
                                    android:fontFamily="@font/poppins_medium"
                                    android:includeFontPadding="false"
                                    android:text="@string/model"
                                    android:textColor="@color/secondary_color"
                                    android:textSize="14sp" />

                                <EditText
                                    android:id="@+id/tvModel"
                                    android:layout_width="0dp"
                                    android:layout_height="40dp"
                                    android:layout_weight="4"
                                    android:background="@drawable/background_edit_input"
                                    android:fontFamily="@font/poppins_regular"
                                    android:includeFontPadding="false"
                                    android:paddingHorizontal="8dp"
                                    android:textColor="@color/primary_text"
                                    android:textColorHint="@color/secondary_text"
                                    android:textSize="14sp" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="5dp"
                                android:orientation="horizontal"
                                android:weightSum="6">

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="2"
                                    android:fontFamily="@font/poppins_medium"
                                    android:includeFontPadding="false"
                                    android:text="@string/category"
                                    android:textColor="@color/secondary_color"
                                    android:textSize="14sp" />

                                <com.google.android.material.textfield.TextInputLayout
                                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="4"
                                    android:hint="Select Category"
                                    app:boxBackgroundColor="#F3F3F3"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@id/titleDivider">

                                    <AutoCompleteTextView
                                        android:id="@+id/tvCategory"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/poppins_regular"
                                        android:includeFontPadding="false"
                                        android:textSize="14sp" />

                                </com.google.android.material.textfield.TextInputLayout>

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="5dp"
                                android:gravity="center_vertical"
                                android:orientation="horizontal"
                                android:weightSum="6">

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="2"
                                    android:fontFamily="@font/poppins_medium"
                                    android:includeFontPadding="false"
                                    android:text="@string/brand"
                                    android:textColor="@color/secondary_color"
                                    android:textSize="14sp" />

                                <com.google.android.material.textfield.TextInputLayout
                                    android:id="@+id/tilMaterial"
                                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="4"
                                    android:hint="Select Brand"
                                    app:boxBackgroundColor="#F3F3F3"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@id/titleDivider">

                                    <AutoCompleteTextView
                                        android:id="@+id/actvBrand"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/poppins_regular"
                                        android:includeFontPadding="false"
                                        android:textSize="14sp" />

                                </com.google.android.material.textfield.TextInputLayout>

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="5dp"
                                android:gravity="center_vertical"
                                android:orientation="horizontal"
                                android:weightSum="6">

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="2"
                                    android:fontFamily="@font/poppins_medium"
                                    android:includeFontPadding="false"
                                    android:text="@string/request_age"
                                    android:textColor="@color/secondary_color"
                                    android:textSize="14sp" />

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="40dp"
                                    android:layout_weight="4"
                                    android:background="@drawable/background_edit_input"
                                    android:gravity="center_vertical"
                                    android:orientation="horizontal"
                                    android:paddingHorizontal="8dp">

                                    <EditText
                                        android:id="@+id/tvRequestAge"
                                        android:layout_width="wrap_content"
                                        android:layout_height="40dp"
                                        android:background="@null"
                                        android:fontFamily="@font/poppins_regular"
                                        android:includeFontPadding="false"
                                        android:paddingHorizontal="8dp"
                                        android:textColor="@color/primary_text"
                                        android:textColorHint="@color/secondary_text"
                                        android:textSize="14sp" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="4dp"
                                        android:fontFamily="@font/poppins_regular"
                                        android:includeFontPadding="false"
                                        android:text="@string/days"
                                        android:textColor="@color/primary_text"
                                        android:textSize="14sp" />

                                </LinearLayout>

                            </LinearLayout>

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabNextPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_forward"
            android:visibility="gone"
            app:backgroundTint="@color/primary_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white" />

        <RelativeLayout
            android:id="@+id/btnNextPage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@drawable/button_background_ripple"
            android:clickable="true"
            android:elevation="10dp"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/imgForward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_forward"
                app:tint="@color/white" />

            <ProgressBar
                android:id="@+id/buttonProgress"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:indeterminateTint="@color/white"
                android:visibility="gone" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>